@@ -113,21 +113,35 @@ public class JSpinner extends JComponent
                                                               PropertyChangeListener,
                                                               LayoutManager
   {
+    private JSpinner spinner;
+    
     /**
-     * Creates a new DefaultEditor object.
+     * Creates a new <code>DefaultEditor</code> object.
      *
-     * @param spinner DOCUMENT ME!
+     * @param spinner the <code>JSpinner</code> associated with this editor
      */
     public DefaultEditor(JSpinner spinner)
     {
+      this.spinner = spinner;
+      
       spinner.addChangeListener(this);
-    } /* TODO */
+    }
+
+    /**
+     * Returns the <code>JSpinner</code> object for this editor.
+     */
+    public JSpinner getSpinner()
+    {
+      return spinner;
+    }
+    
     /**
      * DOCUMENT ME!
      */
     public void commitEdit()
     {
     } /* TODO */
+
     /**
      * DOCUMENT ME!
      *
@@ -147,6 +161,7 @@ public class JSpinner extends JComponent
     {
       return null;
     } /* TODO */
+    
     /**
      * DOCUMENT ME!
      *
@@ -155,6 +170,7 @@ public class JSpinner extends JComponent
     public void layoutContainer(Container parent)
     {
     } /* TODO */
+    
     /**
      * DOCUMENT ME!
      *
@@ -166,6 +182,7 @@ public class JSpinner extends JComponent
     {
       return null;
     } /* TODO */
+    
     /**
      * DOCUMENT ME!
      *
@@ -177,22 +194,25 @@ public class JSpinner extends JComponent
     {
       return null;
     } /* TODO */
+    
     /**
      * DOCUMENT ME!
      *
-     * @param evt DOCUMENT ME!
+     * @param event DOCUMENT ME!
      */
-    public void propertyChange(PropertyChangeEvent evt)
+    public void propertyChange(PropertyChangeEvent event)
     {
     } /* TODO */
+    
     /**
      * DOCUMENT ME!
      *
-     * @param evt DOCUMENT ME!
+     * @param event DOCUMENT ME!
      */
-    public void stateChanged(ChangeEvent evt)
+    public void stateChanged(ChangeEvent event)
     {
     } /* TODO */
+    
     /* no-ops */
     public void removeLayoutComponent(Component child)
     {
@@ -225,6 +245,16 @@ public class JSpinner extends JComponent
     }
 
     /**
+     * Creates a new NumberEditor object.
+     *
+     * @param spinner DOCUMENT ME!
+     */
+    public NumberEditor(JSpinner spinner, String decimalFormatPattern)
+    {
+      super(spinner);
+    }
+
+    /**
      * DOCUMENT ME!
      *
      * @return DOCUMENT ME!
@@ -232,6 +262,11 @@ public class JSpinner extends JComponent
     public DecimalFormat getFormat()
     {
       return null;
+    }
+
+    public SpinnerNumberModel getModel()
+    {
+      return (SpinnerNumberModel) getSpinner().getModel();
     }
   }
 
